@@ -79,7 +79,7 @@ C
       IPAT=0
       ISPL=0
 C
-    1 WRITE(6,*) '## INPUT : MODEL(1-5),ZORG,ZSTEP,NSTEP,IPAT,ISPL'
+    1 WRITE(6,*) '## INPUT : MODEL(1-6),ZORG,ZSTEP,NSTEP,IPAT,ISPL'
       READ(5,*,ERR=1,END=9999) MODEL,ZORG,ZSTEP,NSTEP,IPAT,ISPL
 C
       DO 10 I=1,NSTEP
@@ -98,13 +98,14 @@ C
       IF(MODEL.EQ.1) THEN
          CALL CONTR1(A,41,41,41,ZORG,ZSTEP,NSTEP,0)
       ELSEIF(MODEL.EQ.2) THEN
-C         CALL CONTE1(A,41,41,41,ZL,NSTEP,0,IPAT,KA)
          CALL CONTP1(A,41,41,41,ZORG,ZSTEP,NSTEP,0,IPAT,KA)
       ELSEIF(MODEL.EQ.3) THEN
          CALL CONTQ1(A,41,41,41,ZORG,ZSTEP,NSTEP,0,IPAT,KA)
       ELSEIF(MODEL.EQ.4) THEN
-         CALL CONTG1(A,41,41,41,ZL,RGBL,ILN,WLN,NSTEP,ISPL,0,KA)
+         CALL CONTE1(A,41,41,41,ZL,NSTEP,0,IPAT,KA)
       ELSEIF(MODEL.EQ.5) THEN
+         CALL CONTG1(A,41,41,41,ZL,RGBL,ILN,WLN,NSTEP,ISPL,0,KA)
+      ELSEIF(MODEL.EQ.6) THEN
          CALL CONTF1(A,41,41,41,ZL,RGB,NSTEP,0)
          CALL SETLIN(0,0,7)
          CALL GFRAME
